# ADX-rp2040-DDS

./: .gitignore  API.md  BUILD.md  CMakeLists.txt  CONTRIBUTING.md  HARDWARE.md  README.md
PCB/: ADX-rp2040-DDS.kicad_sch  ADX_rp2040_DDS_PinOut.xlsx
src/: adx_transceiver.c  adx_transceiver.h  config.h  dds.c  dds.h  ft8_protocol.c  ft8_protocol.h  main.c  tusb_config.h  usb_audio.c  usb_audio.h  usb_descriptors.c
